# TopDownShooter-V2

./: README.md  TopDownShooter_V2_v0.0.41.patch  a  c  pyproject.toml  r  rf  t  versions.md
docs/: configuration_ru.md  enemy_tactics_ru.md
res/: map_3d_viewer.py
res/config/: default_runtime_config.json  weapons.json
res/fonts/: README.md
src/topdown_shooter/: __init__.py  __main__.py
src/topdown_shooter/app/: cli.py  inspect_map.py  run_game.py
src/topdown_shooter/combat/: __init__.py  enemies.py  projectiles.py  weapons.py
src/topdown_shooter/config/: default_runtime_config.json  runtime_config.py
src/topdown_shooter/debug/: __init__.py  overlay.py
src/topdown_shooter/diagnostics/: summary.py
src/topdown_shooter/map_loading/: errors.py  manifest.py  package_loader.py  validation_report.py
src/topdown_shooter/rendering/: camera.py  colors.py  enemy_renderer.py  fps_counter.py  map_renderer.py  player_hud.py  player_renderer.py  projectile_renderer.py  raylib_window.py  text.py
src/topdown_shooter/world/: collision.py  coordinates.py  pathfinding.py  player.py  player_aim.py  player_controller.py  runtime_map.py  runtime_map_builder.py  tile.py
tests/: test_camera.py  test_cli.py  test_enemies.py  test_map_renderer.py  test_pathfinding.py  test_player.py  test_projectiles.py  test_runtime_config.py  test_runtime_map_builder.py  test_weapons.py
