[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "topdown-shooter"
version = "0.0.24"
description = "Runtime foundation for TopDownShooter V.2."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "TopDownShooter V.2" }
]
dependencies = []

[project.scripts]
topdown-shooter = "topdown_shooter.app.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
